# unofficial-api-for-beeg

./: README.md  pyproject.toml
beeg_api/: __init__.py  beeg_api.py
beeg_api/modules/: errors.py  type_hints.py
beeg_api/tests/: test_video.py
