[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[project]
name = "beeg_api"
version = "1.3"
description = "A Python API for the Porn Site beeg.com"
requires-python = ">=3.10"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
dependencies = [
    "eaf_base_api",
    "m3u8"
]
classifiers = [
    "Programming Language :: Python",
]

[project.urls]
Homepage = "https://github.com/EchterAlsFake/beeg_api"

[project.optional-dependencies]
av = ["av; python_version >= '3.10'"]
full = ["lxml"] # H2 for HTTP 2.0 support, LXML for faster parsing speed, though optional :)

[tool.uv.build-backend]
module-root = ""
